# bewerberboerse-api

./: README.md  api_example.R  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/Bewerberboerse/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/Bewerberboerse/api/: __init__.py  default_api.py
python-client/deutschland/Bewerberboerse/apis/: __init__.py
python-client/deutschland/Bewerberboerse/model/: __init__.py
python-client/deutschland/Bewerberboerse/models/: __init__.py
python-client/docs/: DefaultApi.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: Bewerberboerse.api.rst  Bewerberboerse.apis.rst  Bewerberboerse.model.rst  Bewerberboerse.models.rst  Bewerberboerse.rst  modules.rst
python-client/test/: test_default_api.py
